--- a/src/app/ui/styles/home.module.css
+++ b/src/app/ui/styles/home.module.css
@@ -5,6 +5,13 @@
 .bg_wisteria {
   background-color: #8e44ad;
 }
+.text_green {
+  color: #099429;
+}
+
+.bg_green {
+  background-color: #099429;
+}
 
 .fit_content {
   width: fit-content;
